# Typing-Game

./: README.md  highscores.txt  typing-game.cabal
src/: Controller.hs  Game.hs  Main.hs  Model.hs  View.hs  Words.hs
